# ProjectSuzu

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LEGAL.md  LEGAL.zh-CN.md  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.zh-CN.md  about-markdown.hbs  about.toml
.github/: pull_request_template.md  pull_request_template.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh-CN.md  config.yml  feature_request.md  feature_request.zh-CN.md
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md  README.zh-CN.md
crates/suzu-app/: Cargo.toml
crates/suzu-app/src/: app.rs  config.rs  lib.rs  scene.rs
crates/suzu-app/src/app/: animation.rs  command_handler.rs  effects.rs  frame_build.rs  history.rs  input_handler.rs  runtime.rs  save_flow.rs  system_menu.rs  tests.rs  title_screen.rs
crates/suzu-app/src/app/tests/: animation.rs  audio.rs  effects.rs  history.rs  input.rs  mod.rs  runtime.rs  save_restore.rs  script_flow.rs  system_menu.rs  title_screen.rs
crates/suzu-asset/: Cargo.toml
crates/suzu-asset/src/: archive.rs  decrypt_module.rs  krkr.rs  lib.rs  manager.rs  manifest.rs  texture.rs  types.rs  xp3.rs  xp3_plugin.rs
crates/suzu-audio/: Cargo.toml
crates/suzu-audio/src/: backend.rs  channel.rs  lib.rs  mixer.rs  source.rs
crates/suzu-core/: Cargo.toml
crates/suzu-core/src/: error.rs  lib.rs  math.rs  types.rs
crates/suzu-editor-core/: Cargo.toml
crates/suzu-editor-core/src/: diagnostics.rs  document.rs  export.rs  graph.rs  import.rs  krkr.rs  lib.rs  project.rs  undo.rs
crates/suzu-input/: Cargo.toml
crates/suzu-input/src/: lib.rs
crates/suzu-platform/: Cargo.toml
crates/suzu-platform/src/: desktop.rs  lib.rs  mobile.rs  web.rs
crates/suzu-platform/src/desktop/: app_loop.rs  frame.rs  gpu.rs  input.rs  mod.rs  pipeline.rs  sprite.rs  text.rs  texture.rs  window.rs
crates/suzu-project/: Cargo.toml
crates/suzu-project/src/: lib.rs
crates/suzu-render/: Cargo.toml
crates/suzu-render/src/: adapter.rs  lib.rs  renderer.rs  tween.rs
crates/suzu-render/src/layer/: mod.rs  sprite.rs
crates/suzu-save/: Cargo.toml
crates/suzu-save/src/: lib.rs  manager.rs  state.rs
crates/suzu-script/: Cargo.toml
crates/suzu-script/src/: compiler.rs  extension.rs  lib.rs
crates/suzu-script/src/compiler/: attributes.rs  commands.rs  control_flow.rs  diagnostics.rs  mod.rs  suggestions.rs  tests.rs  versioning.rs
crates/suzu-script/src/parser/: ast.rs  braces.rs  document.rs  indent.rs  markup.rs  mod.rs
crates/suzu-script/src/vm/: commands.rs  mod.rs  queue.rs
crates/suzu-text/: Cargo.toml
crates/suzu-text/src/: layout.rs  lib.rs  reveal.rs  ruby.rs  voice_sync.rs
docs/: api-stability.md  api-stability.zh-CN.md  decrypt-modules.md  developer-checks.md  developer-checks.zh-CN.md  framework-guide.md  framework-guide.zh-CN.md  getting-started.md  getting-started.zh-CN.md  implementation-checklist.md  implementation-checklist.zh-CN.md  project-continuation-context.md  project-layout.md  project-layout.zh-CN.md  project-plan.md  project-plan.zh-CN.md  release-checklist.md  release-checklist.zh-CN.md  release-packaging.md  release-packaging.zh-CN.md  scripting-reference.md  scripting-reference.zh-CN.md  short-vn-demo.md  short-vn-demo.zh-CN.md  user-guide.md  user-guide.zh-CN.md  visual-script-editor-development-plan.md  visual-script-editor-development-plan.zh-CN.md  xp3-plugin-interface.md  xp3-plugin-interface.zh-CN.md  xp3-support.md  xp3-support.zh-CN.md
examples/branching-story/: Cargo.toml
examples/branching-story/script/: main.szs
examples/branching-story/src/: main.rs
examples/decrypt-modules/: xor-5a.json  xor-after-inflate-90.json
examples/hello-world/: Cargo.toml
examples/hello-world/script/: main.szs
examples/hello-world/src/: error_dialog.rs  main.rs
examples/short-vn-demo/: Cargo.toml  README.md  README.zh-CN.md
examples/short-vn-demo/assets/: README.md  README.zh-CN.md
examples/short-vn-demo/script/: main.szs
examples/short-vn-demo/src/: main.rs
examples/stress-scene/script/: main.szs
examples/ui-save-load-demo/: Cargo.toml
examples/ui-save-load-demo/script/: main.szs
examples/ui-save-load-demo/src/: main.rs
examples/web-browser-shell/: bootstrap.js  index.html
scripts/: package-desktop.ps1
templates/krkr-like-vn/: README.md  README.zh-CN.md  game.suzu.toml
templates/krkr-like-vn/scenario/: main.szs
templates/minimal-vn/: Cargo.toml  README.md  README.zh-CN.md
templates/minimal-vn/assets/: README.md  README.zh-CN.md
templates/minimal-vn/script/: main.szs
templates/minimal-vn/src/: main.rs
templates/starter-vn/: README.md  README.zh-CN.md  game.suzu.toml
templates/starter-vn/assets/: README.md  README.zh-CN.md
tests/smoke/: Cargo.toml
tests/smoke/src/: lib.rs
tests/smoke/tests/: smoke.rs
tools/suzu-bench/: Cargo.toml
tools/suzu-bench/src/: main.rs
tools/suzu-compiler/: Cargo.toml
tools/suzu-compiler/src/: main.rs
tools/suzu-editor/: Cargo.toml
tools/suzu-editor/src/: main.rs
tools/suzu-launcher/: Cargo.toml  build.rs
tools/suzu-launcher/src/: app.rs  cli.rs  conversion.rs  main.rs  paths.rs  preview.rs
tools/suzu-launcher/src/ui/: krkr_tab.rs  legal_notice.rs  mod.rs  preview_panel.rs  project_tab.rs  xp3_tab.rs
tools/suzu-packer/: Cargo.toml
tools/suzu-packer/src/: lib.rs  main.rs
tools/suzu-player/: Cargo.toml
tools/suzu-player/src/: error_dialog.rs  main.rs
tools/suzu-xp3-viewer/: Cargo.toml
tools/suzu-xp3-viewer/src/: app.rs  cli.rs  fonts.rs  main.rs  paths.rs  plugin.rs  preview.rs  ui.rs
