[workspace]
members = [
    "crates/suzu-core",
    "crates/suzu-script",
    "crates/suzu-render",
    "crates/suzu-text",
    "crates/suzu-audio",
    "crates/suzu-asset",
    "crates/suzu-save",
    "crates/suzu-input",
    "crates/suzu-platform",
    "crates/suzu-app",
    "crates/suzu-project",
    "crates/suzu-editor-core",
    "examples/hello-world",
    "examples/branching-story",
    "examples/ui-save-load-demo",
    "examples/short-vn-demo",
    "tools/suzu-packer",
    "tools/suzu-compiler",
    "tools/suzu-bench",
    "tools/suzu-player",
    "tools/suzu-editor",
    "tools/suzu-launcher",
    "tools/suzu-xp3-viewer",
    "tests/smoke",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fangbm/ProjectSuzu"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
toml = "1.1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
winresource = "0.1"
eframe = { version = "0.27", default-features = true }
encoding_rs = "0.8"
suzu-core = { path = "crates/suzu-core" }
suzu-script = { path = "crates/suzu-script" }
suzu-render = { path = "crates/suzu-render" }
suzu-text = { path = "crates/suzu-text" }
suzu-audio = { path = "crates/suzu-audio" }
suzu-asset = { path = "crates/suzu-asset" }
suzu-save = { path = "crates/suzu-save" }
suzu-input = { path = "crates/suzu-input" }
suzu-platform = { path = "crates/suzu-platform" }
suzu-app = { path = "crates/suzu-app" }
suzu-project = { path = "crates/suzu-project" }
suzu-editor-core = { path = "crates/suzu-editor-core" }
