[package]
name = "suzu-asset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
image = { version = "=0.25.6", default-features = false, features = ["png", "jpeg", "webp"] }
serde.workspace = true
serde_json.workspace = true
