[package]
name = "suzu-platform"
version = "0.1.4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = "0.14.2"
pollster = "0.4.0"
serde.workspace = true
suzu-core.workspace = true
wgpu = "24.0.5"
winit = "0.30.13"
