[package]
name = "suzu-project"
version = "0.1.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
suzu-app.workspace = true
suzu-asset.workspace = true
suzu-core.workspace = true
suzu-platform.workspace = true

[dev-dependencies]
suzu-packer = { path = "../../tools/suzu-packer" }
