[package]
name = "suzu-save"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
suzu-audio.workspace = true
suzu-core.workspace = true
suzu-render.workspace = true
suzu-script.workspace = true
suzu-text.workspace = true
