[package]
name = "suzu-script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mlua = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
suzu-core.workspace = true

[features]
default = []
lua = ["dep:mlua"]
