[package]
name = "suzu-branching-story"
version = "0.1.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
suzu-app.workspace = true
suzu-platform.workspace = true
windows-sys.workspace = true
