[package]
name = "suzu-hello-world"
version = "0.1.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
suzu-app.workspace = true
suzu-platform.workspace = true
windows-sys.workspace = true
