[package]
name = "suzu-short-vn-demo"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
suzu-app.workspace = true
suzu-platform.workspace = true
suzu-save.workspace = true
windows-sys.workspace = true
