[package]
name = "suzu-editor"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
suzu-editor-core.workspace = true
suzu-project.workspace = true
