[package]
name = "suzu-player"
version = "0.1.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
suzu-platform.workspace = true
suzu-project.workspace = true
windows-sys.workspace = true
