[package]
name = "suzu-xp3-viewer"
version = "0.1.4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
suzu-app.workspace = true
suzu-asset.workspace = true
suzu-core.workspace = true
suzu-platform.workspace = true
