[package]
name = "suzu-xp3-viewer"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
winresource.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
encoding_rs.workspace = true
suzu-app.workspace = true
suzu-asset.workspace = true
suzu-core.workspace = true
suzu-platform.workspace = true
